mongo local change

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,7 +85,7 @@
                 <li><a href="/labtour" class="text-white hover:text-gray-400">Lab Tour</a></li>
                 <li><a href="/labnotes" class="text-white hover:text-gray-400">Lab Notes</a></li>
                 <li><a href="/inventory" class="text-white hover:text-gray-400">Inventory</a></li>
-                <li><a href="http://localhost:8001/profile" class="text-white hover:text-gray-400">Profile</a></li>
+                <li><a href="/profile" class="text-white hover:text-gray-400">Profile</a></li>
             </ul>
         </div>
     </nav>
